package integration

import (
	"fmt"
	"time"
)

// Config defines the configuration for cross-database integration
type Config struct {
	// Event-driven integration
	EventSystem    EventSystemConfig    `yaml:"event_system" json:"event_system"`
	
	// Data synchronization
	Synchronization SynchronizationConfig `yaml:"synchronization" json:"synchronization"`
	
	// Consistency management
	Consistency    ConsistencyConfig     `yaml:"consistency" json:"consistency"`
	
	// Data flow management
	DataFlow       DataFlowConfig        `yaml:"data_flow" json:"data_flow"`
	
	// Monitoring and observability
	Monitoring     IntegrationMonitoringConfig `yaml:"monitoring" json:"monitoring"`
	
	// Performance settings
	BatchSize           int           `yaml:"batch_size" json:"batch_size"`
	MaxConcurrency      int           `yaml:"max_concurrency" json:"max_concurrency"`
	ProcessingTimeout   time.Duration `yaml:"processing_timeout" json:"processing_timeout"`
	RetryAttempts       int           `yaml:"retry_attempts" json:"retry_attempts"`
	RetryBackoff        time.Duration `yaml:"retry_backoff" json:"retry_backoff"`
	CircuitBreakerEnabled bool        `yaml:"circuit_breaker_enabled" json:"circuit_breaker_enabled"`
}

// EventSystemConfig defines event-driven integration configuration
type EventSystemConfig struct {
	Enabled         bool                    `yaml:"enabled" json:"enabled"`
	EventStore      EventStoreConfig        `yaml:"event_store" json:"event_store"`
	EventBus        EventBusConfig          `yaml:"event_bus" json:"event_bus"`
	EventHandlers   []EventHandlerConfig    `yaml:"event_handlers" json:"event_handlers"`
	DeadLetterQueue DeadLetterQueueConfig   `yaml:"dead_letter_queue" json:"dead_letter_queue"`
	
	// Event processing
	ProcessingMode  string                  `yaml:"processing_mode" json:"processing_mode"`   // async, sync, hybrid
	OrderedProcessing bool                  `yaml:"ordered_processing" json:"ordered_processing"`
	DuplicateDetection bool                 `yaml:"duplicate_detection" json:"duplicate_detection"`
	EventTTL        time.Duration           `yaml:"event_ttl" json:"event_ttl"`
}

// EventStoreConfig defines event store configuration
type EventStoreConfig struct {
	Type            string            `yaml:"type" json:"type"`                 // redis, postgres, mongodb
	Database        string            `yaml:"database" json:"database"`
	Stream          string            `yaml:"stream" json:"stream"`
	Partitioning    PartitioningConfig `yaml:"partitioning" json:"partitioning"`
	Retention       time.Duration     `yaml:"retention" json:"retention"`
	Compression     bool              `yaml:"compression" json:"compression"`
	Encryption      bool              `yaml:"encryption" json:"encryption"`
}

// EventBusConfig defines event bus configuration
type EventBusConfig struct {
	Type            string            `yaml:"type" json:"type"`                 // redis_streams, kafka, nats
	Topics          []string          `yaml:"topics" json:"topics"`
	ConsumerGroups  []string          `yaml:"consumer_groups" json:"consumer_groups"`
	MessageFormat   string            `yaml:"message_format" json:"message_format"` // json, protobuf, avro
	Compression     bool              `yaml:"compression" json:"compression"`
	BatchProcessing bool              `yaml:"batch_processing" json:"batch_processing"`
	BatchSize       int               `yaml:"batch_size" json:"batch_size"`
}

// EventHandlerConfig defines event handler configuration
type EventHandlerConfig struct {
	Name            string            `yaml:"name" json:"name"`
	EventTypes      []string          `yaml:"event_types" json:"event_types"`
	SourceDatabase  string            `yaml:"source_database" json:"source_database"`
	TargetDatabases []string          `yaml:"target_databases" json:"target_databases"`
	ProcessingMode  string            `yaml:"processing_mode" json:"processing_mode"`
	Filters         []FilterConfig    `yaml:"filters" json:"filters"`
	Transformations []TransformConfig `yaml:"transformations" json:"transformations"`
	Priority        int               `yaml:"priority" json:"priority"`
	MaxRetries      int               `yaml:"max_retries" json:"max_retries"`
	RetryBackoff    time.Duration     `yaml:"retry_backoff" json:"retry_backoff"`
}

// FilterConfig defines event filtering configuration
type FilterConfig struct {
	Type        string                 `yaml:"type" json:"type"`         // tenant, classification, field
	Field       string                 `yaml:"field" json:"field"`
	Operator    string                 `yaml:"operator" json:"operator"` // eq, ne, in, not_in, regex
	Value       interface{}            `yaml:"value" json:"value"`
	Conditions  map[string]interface{} `yaml:"conditions" json:"conditions"`
}

// TransformConfig defines data transformation configuration
type TransformConfig struct {
	Type        string                 `yaml:"type" json:"type"`         // field_mapping, enrichment, aggregation
	Source      string                 `yaml:"source" json:"source"`
	Target      string                 `yaml:"target" json:"target"`
	Operation   string                 `yaml:"operation" json:"operation"`
	Parameters  map[string]interface{} `yaml:"parameters" json:"parameters"`
}

// PartitioningConfig defines event partitioning configuration
type PartitioningConfig struct {
	Enabled     bool     `yaml:"enabled" json:"enabled"`
	Strategy    string   `yaml:"strategy" json:"strategy"`    // tenant, time, hash
	Partitions  int      `yaml:"partitions" json:"partitions"`
	PartitionKey string  `yaml:"partition_key" json:"partition_key"`
}

// DeadLetterQueueConfig defines dead letter queue configuration
type DeadLetterQueueConfig struct {
	Enabled     bool          `yaml:"enabled" json:"enabled"`
	MaxRetries  int           `yaml:"max_retries" json:"max_retries"`
	TTL         time.Duration `yaml:"ttl" json:"ttl"`
	AlertThreshold int        `yaml:"alert_threshold" json:"alert_threshold"`
}

// SynchronizationConfig defines data synchronization configuration
type SynchronizationConfig struct {
	Enabled         bool                     `yaml:"enabled" json:"enabled"`
	Mode            string                   `yaml:"mode" json:"mode"`            // real_time, batch, hybrid
	SyncRules       []SyncRuleConfig         `yaml:"sync_rules" json:"sync_rules"`
	ConflictResolution ConflictResolutionConfig `yaml:"conflict_resolution" json:"conflict_resolution"`
	ChangeDetection ChangeDetectionConfig    `yaml:"change_detection" json:"change_detection"`
	
	// Sync scheduling
	BatchInterval   time.Duration            `yaml:"batch_interval" json:"batch_interval"`
	SyncWindow      SyncWindowConfig         `yaml:"sync_window" json:"sync_window"`
	
	// Performance settings
	SyncBatchSize   int                      `yaml:"sync_batch_size" json:"sync_batch_size"`
	MaxSyncWorkers  int                      `yaml:"max_sync_workers" json:"max_sync_workers"`
}

// SyncRuleConfig defines synchronization rules
type SyncRuleConfig struct {
	Name            string            `yaml:"name" json:"name"`
	SourceDatabase  string            `yaml:"source_database" json:"source_database"`
	SourceTable     string            `yaml:"source_table" json:"source_table"`
	TargetDatabase  string            `yaml:"target_database" json:"target_database"`
	TargetTable     string            `yaml:"target_table" json:"target_table"`
	SyncType        string            `yaml:"sync_type" json:"sync_type"`        // full, incremental, delta
	Direction       string            `yaml:"direction" json:"direction"`        // one_way, bi_directional
	FieldMappings   []FieldMapping    `yaml:"field_mappings" json:"field_mappings"`
	Filters         []FilterConfig    `yaml:"filters" json:"filters"`
	Transformations []TransformConfig `yaml:"transformations" json:"transformations"`
	Priority        int               `yaml:"priority" json:"priority"`
	Enabled         bool              `yaml:"enabled" json:"enabled"`
}

// FieldMapping defines field mapping for synchronization
type FieldMapping struct {
	SourceField string `yaml:"source_field" json:"source_field"`
	TargetField string `yaml:"target_field" json:"target_field"`
	DataType    string `yaml:"data_type" json:"data_type"`
	Required    bool   `yaml:"required" json:"required"`
	Transform   string `yaml:"transform" json:"transform"`
}

// ConflictResolutionConfig defines conflict resolution strategies
type ConflictResolutionConfig struct {
	Strategy        string            `yaml:"strategy" json:"strategy"`         // last_write_wins, merge, custom
	TimestampField  string            `yaml:"timestamp_field" json:"timestamp_field"`
	VersionField    string            `yaml:"version_field" json:"version_field"`
	ConflictHandler string            `yaml:"conflict_handler" json:"conflict_handler"`
	CustomRules     []ConflictRule    `yaml:"custom_rules" json:"custom_rules"`
	LogConflicts    bool              `yaml:"log_conflicts" json:"log_conflicts"`
}

// ConflictRule defines custom conflict resolution rules
type ConflictRule struct {
	Condition   string                 `yaml:"condition" json:"condition"`
	Action      string                 `yaml:"action" json:"action"`
	Parameters  map[string]interface{} `yaml:"parameters" json:"parameters"`
}

// ChangeDetectionConfig defines change detection configuration
type ChangeDetectionConfig struct {
	Method          string            `yaml:"method" json:"method"`           // timestamp, version, checksum, trigger
	TimestampField  string            `yaml:"timestamp_field" json:"timestamp_field"`
	VersionField    string            `yaml:"version_field" json:"version_field"`
	ChecksumField   string            `yaml:"checksum_field" json:"checksum_field"`
	PollingInterval time.Duration     `yaml:"polling_interval" json:"polling_interval"`
	WatermarkField  string            `yaml:"watermark_field" json:"watermark_field"`
}

// SyncWindowConfig defines synchronization time windows
type SyncWindowConfig struct {
	Enabled     bool              `yaml:"enabled" json:"enabled"`
	StartTime   string            `yaml:"start_time" json:"start_time"`     // HH:MM format
	EndTime     string            `yaml:"end_time" json:"end_time"`         // HH:MM format
	Timezone    string            `yaml:"timezone" json:"timezone"`
	Weekdays    []string          `yaml:"weekdays" json:"weekdays"`
	Holidays    []string          `yaml:"holidays" json:"holidays"`
}

// ConsistencyConfig defines data consistency configuration
type ConsistencyConfig struct {
	Enabled         bool                  `yaml:"enabled" json:"enabled"`
	ConsistencyLevel string               `yaml:"consistency_level" json:"consistency_level"` // eventual, strong, causal
	ValidationRules []ValidationRuleConfig `yaml:"validation_rules" json:"validation_rules"`
	Checksums       ChecksumConfig        `yaml:"checksums" json:"checksums"`
	Reconciliation  ReconciliationConfig  `yaml:"reconciliation" json:"reconciliation"`
	
	// Consistency checks
	CheckInterval   time.Duration         `yaml:"check_interval" json:"check_interval"`
	CheckBatchSize  int                   `yaml:"check_batch_size" json:"check_batch_size"`
	AlertThreshold  float64               `yaml:"alert_threshold" json:"alert_threshold"`
	AutoRepair      bool                  `yaml:"auto_repair" json:"auto_repair"`
}

// ValidationRuleConfig defines validation rules for consistency
type ValidationRuleConfig struct {
	Name            string                 `yaml:"name" json:"name"`
	Type            string                 `yaml:"type" json:"type"`             // referential, data, business
	SourceDatabase  string                 `yaml:"source_database" json:"source_database"`
	TargetDatabase  string                 `yaml:"target_database" json:"target_database"`
	Rule            string                 `yaml:"rule" json:"rule"`
	Parameters      map[string]interface{} `yaml:"parameters" json:"parameters"`
	Severity        string                 `yaml:"severity" json:"severity"`     // error, warning, info
	Enabled         bool                   `yaml:"enabled" json:"enabled"`
}

// ChecksumConfig defines checksum validation configuration
type ChecksumConfig struct {
	Enabled     bool          `yaml:"enabled" json:"enabled"`
	Algorithm   string        `yaml:"algorithm" json:"algorithm"`   // md5, sha256, crc32
	Granularity string        `yaml:"granularity" json:"granularity"` // row, table, database
	Schedule    string        `yaml:"schedule" json:"schedule"`     // cron expression
	BatchSize   int           `yaml:"batch_size" json:"batch_size"`
	Timeout     time.Duration `yaml:"timeout" json:"timeout"`
}

// ReconciliationConfig defines data reconciliation configuration
type ReconciliationConfig struct {
	Enabled         bool              `yaml:"enabled" json:"enabled"`
	Mode            string            `yaml:"mode" json:"mode"`              // automatic, manual, assisted
	Schedule        string            `yaml:"schedule" json:"schedule"`      // cron expression
	Scope           string            `yaml:"scope" json:"scope"`            // full, incremental, selective
	RepairActions   []RepairAction    `yaml:"repair_actions" json:"repair_actions"`
	MaxRepairBatch  int               `yaml:"max_repair_batch" json:"max_repair_batch"`
	DryRun          bool              `yaml:"dry_run" json:"dry_run"`
}

// RepairAction defines automated repair actions
type RepairAction struct {
	Type        string                 `yaml:"type" json:"type"`         // sync, delete, insert, update
	Condition   string                 `yaml:"condition" json:"condition"`
	Priority    int                    `yaml:"priority" json:"priority"`
	Parameters  map[string]interface{} `yaml:"parameters" json:"parameters"`
}

// DataFlowConfig defines data flow management configuration
type DataFlowConfig struct {
	Enabled         bool                `yaml:"enabled" json:"enabled"`
	FlowDefinitions []DataFlowDefinition `yaml:"flow_definitions" json:"flow_definitions"`
	ETLPipelines    []ETLPipelineConfig  `yaml:"etl_pipelines" json:"etl_pipelines"`
	StreamProcessing StreamProcessingConfig `yaml:"stream_processing" json:"stream_processing"`
	
	// Flow control
	RateLimiting    RateLimitingConfig  `yaml:"rate_limiting" json:"rate_limiting"`
	BackPressure    BackPressureConfig  `yaml:"back_pressure" json:"back_pressure"`
	Throttling      ThrottlingConfig    `yaml:"throttling" json:"throttling"`
}

// DataFlowDefinition defines a specific data flow
type DataFlowDefinition struct {
	Name            string              `yaml:"name" json:"name"`
	Description     string              `yaml:"description" json:"description"`
	Source          DataSourceConfig    `yaml:"source" json:"source"`
	Destinations    []DataDestConfig    `yaml:"destinations" json:"destinations"`
	Transformations []TransformConfig   `yaml:"transformations" json:"transformations"`
	Schedule        string              `yaml:"schedule" json:"schedule"`
	Priority        int                 `yaml:"priority" json:"priority"`
	Enabled         bool                `yaml:"enabled" json:"enabled"`
}

// DataSourceConfig defines data source configuration
type DataSourceConfig struct {
	Database    string                 `yaml:"database" json:"database"`
	Table       string                 `yaml:"table" json:"table"`
	Query       string                 `yaml:"query" json:"query"`
	Filters     []FilterConfig         `yaml:"filters" json:"filters"`
	Parameters  map[string]interface{} `yaml:"parameters" json:"parameters"`
}

// DataDestConfig defines data destination configuration
type DataDestConfig struct {
	Database    string                 `yaml:"database" json:"database"`
	Table       string                 `yaml:"table" json:"table"`
	Mode        string                 `yaml:"mode" json:"mode"`         // append, overwrite, upsert
	Partitioning PartitioningConfig    `yaml:"partitioning" json:"partitioning"`
	Parameters  map[string]interface{} `yaml:"parameters" json:"parameters"`
}

// ETLPipelineConfig defines ETL pipeline configuration
type ETLPipelineConfig struct {
	Name            string              `yaml:"name" json:"name"`
	Type            string              `yaml:"type" json:"type"`           // batch, streaming, micro_batch
	Extract         ExtractConfig       `yaml:"extract" json:"extract"`
	Transform       []TransformConfig   `yaml:"transform" json:"transform"`
	Load            LoadConfig          `yaml:"load" json:"load"`
	Schedule        string              `yaml:"schedule" json:"schedule"`
	Dependencies    []string            `yaml:"dependencies" json:"dependencies"`
	Resources       ResourceConfig      `yaml:"resources" json:"resources"`
	Monitoring      PipelineMonitoring  `yaml:"monitoring" json:"monitoring"`
}

// ExtractConfig defines data extraction configuration
type ExtractConfig struct {
	Sources         []DataSourceConfig  `yaml:"sources" json:"sources"`
	Mode            string              `yaml:"mode" json:"mode"`           // full, incremental, cdc
	WatermarkField  string              `yaml:"watermark_field" json:"watermark_field"`
	ChunkSize       int                 `yaml:"chunk_size" json:"chunk_size"`
	Parallelism     int                 `yaml:"parallelism" json:"parallelism"`
}

// LoadConfig defines data loading configuration
type LoadConfig struct {
	Destinations    []DataDestConfig    `yaml:"destinations" json:"destinations"`
	Mode            string              `yaml:"mode" json:"mode"`           // batch, streaming
	WriteBatchSize  int                 `yaml:"write_batch_size" json:"write_batch_size"`
	WriteParallelism int                `yaml:"write_parallelism" json:"write_parallelism"`
	ErrorHandling   ErrorHandlingConfig `yaml:"error_handling" json:"error_handling"`
}

// ResourceConfig defines resource allocation for pipelines
type ResourceConfig struct {
	CPU     string `yaml:"cpu" json:"cpu"`
	Memory  string `yaml:"memory" json:"memory"`
	Workers int    `yaml:"workers" json:"workers"`
	Timeout time.Duration `yaml:"timeout" json:"timeout"`
}

// PipelineMonitoring defines pipeline monitoring configuration
type PipelineMonitoring struct {
	Enabled         bool          `yaml:"enabled" json:"enabled"`
	MetricsEnabled  bool          `yaml:"metrics_enabled" json:"metrics_enabled"`
	AlertsEnabled   bool          `yaml:"alerts_enabled" json:"alerts_enabled"`
	SLAThresholds   SLAThresholds `yaml:"sla_thresholds" json:"sla_thresholds"`
}

// SLAThresholds defines SLA thresholds for monitoring
type SLAThresholds struct {
	ProcessingTime  time.Duration `yaml:"processing_time" json:"processing_time"`
	ErrorRate       float64       `yaml:"error_rate" json:"error_rate"`
	Throughput      int64         `yaml:"throughput" json:"throughput"`
	DataFreshness   time.Duration `yaml:"data_freshness" json:"data_freshness"`
}

// StreamProcessingConfig defines stream processing configuration
type StreamProcessingConfig struct {
	Enabled         bool                  `yaml:"enabled" json:"enabled"`
	Engine          string                `yaml:"engine" json:"engine"`         // redis_streams, kafka_streams
	WindowSize      time.Duration         `yaml:"window_size" json:"window_size"`
	WindowType      string                `yaml:"window_type" json:"window_type"` // tumbling, sliding, session
	Watermark       time.Duration         `yaml:"watermark" json:"watermark"`
	Parallelism     int                   `yaml:"parallelism" json:"parallelism"`
	Checkpointing   CheckpointingConfig   `yaml:"checkpointing" json:"checkpointing"`
}

// CheckpointingConfig defines checkpointing for stream processing
type CheckpointingConfig struct {
	Enabled     bool          `yaml:"enabled" json:"enabled"`
	Interval    time.Duration `yaml:"interval" json:"interval"`
	Storage     string        `yaml:"storage" json:"storage"`
	Compression bool          `yaml:"compression" json:"compression"`
}

// RateLimitingConfig defines rate limiting configuration
type RateLimitingConfig struct {
	Enabled         bool              `yaml:"enabled" json:"enabled"`
	GlobalLimit     int               `yaml:"global_limit" json:"global_limit"`     // requests per second
	PerDatabaseLimit int              `yaml:"per_database_limit" json:"per_database_limit"`
	PerTenantLimit  int               `yaml:"per_tenant_limit" json:"per_tenant_limit"`
	BurstLimit      int               `yaml:"burst_limit" json:"burst_limit"`
	Algorithm       string            `yaml:"algorithm" json:"algorithm"`           // token_bucket, sliding_window
}

// BackPressureConfig defines back pressure handling configuration
type BackPressureConfig struct {
	Enabled         bool              `yaml:"enabled" json:"enabled"`
	QueueSize       int               `yaml:"queue_size" json:"queue_size"`
	HighWatermark   float64           `yaml:"high_watermark" json:"high_watermark"`
	LowWatermark    float64           `yaml:"low_watermark" json:"low_watermark"`
	Action          string            `yaml:"action" json:"action"`                 // drop, buffer, throttle
}

// ThrottlingConfig defines throttling configuration
type ThrottlingConfig struct {
	Enabled         bool              `yaml:"enabled" json:"enabled"`
	MaxThroughput   int               `yaml:"max_throughput" json:"max_throughput"` // operations per second
	AdaptiveEnabled bool              `yaml:"adaptive_enabled" json:"adaptive_enabled"`
	TargetLatency   time.Duration     `yaml:"target_latency" json:"target_latency"`
}

// ErrorHandlingConfig defines error handling configuration
type ErrorHandlingConfig struct {
	RetryEnabled    bool              `yaml:"retry_enabled" json:"retry_enabled"`
	MaxRetries      int               `yaml:"max_retries" json:"max_retries"`
	RetryBackoff    time.Duration     `yaml:"retry_backoff" json:"retry_backoff"`
	DeadLetterQueue bool              `yaml:"dead_letter_queue" json:"dead_letter_queue"`
	FailFast        bool              `yaml:"fail_fast" json:"fail_fast"`
}

// IntegrationMonitoringConfig defines monitoring configuration for integration
type IntegrationMonitoringConfig struct {
	Enabled             bool              `yaml:"enabled" json:"enabled"`
	MetricsCollection   bool              `yaml:"metrics_collection" json:"metrics_collection"`
	TracingEnabled      bool              `yaml:"tracing_enabled" json:"tracing_enabled"`
	AlertsEnabled       bool              `yaml:"alerts_enabled" json:"alerts_enabled"`
	DashboardEnabled    bool              `yaml:"dashboard_enabled" json:"dashboard_enabled"`
	
	// Monitoring intervals
	MetricsInterval     time.Duration     `yaml:"metrics_interval" json:"metrics_interval"`
	HealthCheckInterval time.Duration     `yaml:"health_check_interval" json:"health_check_interval"`
	
	// Alert thresholds
	ErrorRateThreshold  float64           `yaml:"error_rate_threshold" json:"error_rate_threshold"`
	LatencyThreshold    time.Duration     `yaml:"latency_threshold" json:"latency_threshold"`
	QueueSizeThreshold  int               `yaml:"queue_size_threshold" json:"queue_size_threshold"`
}

// DefaultConfig returns a production-ready default configuration for iSECTECH
func DefaultConfig() *Config {
	return &Config{
		EventSystem: EventSystemConfig{
			Enabled: true,
			EventStore: EventStoreConfig{
				Type:        "redis",
				Database:    "events",
				Stream:      "platform_events",
				Retention:   7 * 24 * time.Hour, // 7 days
				Compression: true,
				Encryption:  true,
				Partitioning: PartitioningConfig{
					Enabled:      true,
					Strategy:     "tenant",
					Partitions:   16,
					PartitionKey: "tenant_id",
				},
			},
			EventBus: EventBusConfig{
				Type:            "redis_streams",
				Topics:          []string{"security_events", "audit_events", "compliance_events"},
				ConsumerGroups:  []string{"integration_processor", "analytics_processor"},
				MessageFormat:   "json",
				Compression:     true,
				BatchProcessing: true,
				BatchSize:       100,
			},
			ProcessingMode:     "async",
			OrderedProcessing:  true,
			DuplicateDetection: true,
			EventTTL:          24 * time.Hour,
			DeadLetterQueue: DeadLetterQueueConfig{
				Enabled:        true,
				MaxRetries:     3,
				TTL:            48 * time.Hour,
				AlertThreshold: 10,
			},
		},
		Synchronization: SynchronizationConfig{
			Enabled: true,
			Mode:    "hybrid", // Real-time for critical data, batch for analytics
			ConflictResolution: ConflictResolutionConfig{
				Strategy:       "last_write_wins",
				TimestampField: "updated_at",
				VersionField:   "version",
				LogConflicts:   true,
			},
			ChangeDetection: ChangeDetectionConfig{
				Method:          "timestamp",
				TimestampField:  "updated_at",
				PollingInterval: 30 * time.Second,
			},
			BatchInterval:  5 * time.Minute,
			SyncBatchSize:  1000,
			MaxSyncWorkers: 10,
		},
		Consistency: ConsistencyConfig{
			Enabled:          true,
			ConsistencyLevel: "eventual",
			CheckInterval:    1 * time.Hour,
			CheckBatchSize:   10000,
			AlertThreshold:   0.99, // 99% consistency required
			AutoRepair:       false, // Manual approval for repairs
			Checksums: ChecksumConfig{
				Enabled:     true,
				Algorithm:   "sha256",
				Granularity: "table",
				Schedule:    "0 2 * * *", // Daily at 2 AM
				BatchSize:   5000,
				Timeout:     30 * time.Minute,
			},
			Reconciliation: ReconciliationConfig{
				Enabled:        true,
				Mode:          "assisted", // Human oversight required
				Schedule:      "0 3 * * 0", // Weekly on Sunday at 3 AM
				Scope:         "incremental",
				MaxRepairBatch: 100,
				DryRun:         true, // Always dry run first
			},
		},
		DataFlow: DataFlowConfig{
			Enabled: true,
			RateLimiting: RateLimitingConfig{
				Enabled:          true,
				GlobalLimit:      10000,  // 10K ops/sec
				PerDatabaseLimit: 2500,   // 2.5K ops/sec per DB
				PerTenantLimit:   1000,   // 1K ops/sec per tenant
				BurstLimit:       20000,  // 20K burst
				Algorithm:        "token_bucket",
			},
			BackPressure: BackPressureConfig{
				Enabled:       true,
				QueueSize:     10000,
				HighWatermark: 0.8,
				LowWatermark:  0.2,
				Action:        "throttle",
			},
			StreamProcessing: StreamProcessingConfig{
				Enabled:     true,
				Engine:      "redis_streams",
				WindowSize:  1 * time.Minute,
				WindowType:  "tumbling",
				Watermark:   30 * time.Second,
				Parallelism: 4,
				Checkpointing: CheckpointingConfig{
					Enabled:     true,
					Interval:    30 * time.Second,
					Storage:     "redis",
					Compression: true,
				},
			},
		},
		Monitoring: IntegrationMonitoringConfig{
			Enabled:             true,
			MetricsCollection:   true,
			TracingEnabled:      true,
			AlertsEnabled:       true,
			DashboardEnabled:    true,
			MetricsInterval:     30 * time.Second,
			HealthCheckInterval: 1 * time.Minute,
			ErrorRateThreshold:  0.01, // 1% error rate threshold
			LatencyThreshold:    100 * time.Millisecond,
			QueueSizeThreshold:  5000,
		},
		BatchSize:             1000,
		MaxConcurrency:        50,
		ProcessingTimeout:     30 * time.Second,
		RetryAttempts:         3,
		RetryBackoff:          1 * time.Second,
		CircuitBreakerEnabled: true,
	}
}

// LoadConfig loads integration configuration from file
func LoadConfig(configPath string) (*Config, error) {
	// Implementation would load from YAML/JSON file
	// For now, return default config
	return DefaultConfig(), nil
}

// ValidateConfig validates the integration configuration
func (c *Config) ValidateConfig() []error {
	var errors []error
	
	// Validate event system configuration
	if c.EventSystem.Enabled {
		if c.EventSystem.EventStore.Type == "" {
			errors = append(errors, fmt.Errorf("event store type is required when event system is enabled"))
		}
		
		if c.EventSystem.EventStore.Retention < 1*time.Hour {
			errors = append(errors, fmt.Errorf("event store retention must be at least 1 hour"))
		}
	}
	
	// Validate synchronization configuration
	if c.Synchronization.Enabled {
		if c.Synchronization.Mode != "real_time" && c.Synchronization.Mode != "batch" && c.Synchronization.Mode != "hybrid" {
			errors = append(errors, fmt.Errorf("invalid synchronization mode: %s", c.Synchronization.Mode))
		}
		
		if c.Synchronization.SyncBatchSize <= 0 {
			errors = append(errors, fmt.Errorf("sync batch size must be greater than 0"))
		}
	}
	
	// Validate consistency configuration
	if c.Consistency.Enabled {
		if c.Consistency.AlertThreshold < 0.0 || c.Consistency.AlertThreshold > 1.0 {
			errors = append(errors, fmt.Errorf("consistency alert threshold must be between 0.0 and 1.0"))
		}
	}
	
	// Validate performance settings
	if c.BatchSize <= 0 {
		errors = append(errors, fmt.Errorf("batch size must be greater than 0"))
	}
	
	if c.MaxConcurrency <= 0 {
		errors = append(errors, fmt.Errorf("max concurrency must be greater than 0"))
	}
	
	return errors
}